Update link download spark

--- a/python-app/Dockerfile
+++ b/python-app/Dockerfile
@@ -11,10 +11,10 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 # ========== 2. Cài Spark ==========
-ENV SPARK_VERSION=3.5.1
+ENV SPARK_VERSION=3.5.7
 ENV HADOOP_VERSION=3
 
-RUN wget https://archive.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz && \
+RUN wget https://dlcdn.apache.org/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz && \
     tar xvf spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz && \
     mv spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION} /opt/spark && \
     rm spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz
